--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "cSVD burden annotation and analysis project"
+  title: "cSVD burden project"
   navbar:
     left:
       - href: index.qmd
