Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,5 @@ Imports:
     gt
 Encoding: UTF-8
 License: CC BY 4.0
+URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
+BugReports: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project/issues
