--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Suggests:
     styler,
     gitcreds,
     roxygen2,
-    remotes
+    remotes,
+    testthat
 Depends: 
     tidymodels,
     tidyverse
@@ -27,7 +28,9 @@ Imports:
     targets,
     knitr,
     rmarkdown,
-    gt
+    gt,
+    Hmisc,
+    tidycomm
 Encoding: UTF-8
 License: CC BY 4.0
 URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
