--- a/.github/workflows/build-website.yaml
+++ b/.github/workflows/build-website.yaml
@@ -26,9 +26,9 @@ jobs:
           # version: 0.9.600
 
 
-      # - uses: r-lib/actions/setup-r@v2
-      #
-      # - uses: r-lib/actions/setup-renv@v2
+      - uses: r-lib/actions/setup-r@v2
+
+      - uses: r-lib/actions/setup-renv@v2
 
 
       # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
