--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,30 +7,23 @@ Authors@R:
            comment = c(ORCID = "0000-0002-7559-1154"))
 Suggests: 
     pak,
-    prodigenr,
     renv,
-    usethis,
     styler,
     gitcreds,
     roxygen2,
     remotes,
-    testthat
-Depends: 
-    tidymodels,
+    gt,
+    Hmisc,
+    tidycomm,
+    REDCapR,
+    usethis,
     tidyverse
 Imports: 
     here,
     keyring,
     quarto,
-    REDCapR,
-    skimr,
-    tarchetypes,
-    targets,
     knitr,
-    rmarkdown,
-    gt,
-    Hmisc,
-    tidycomm
+    rmarkdown
 Encoding: UTF-8
 License: CC BY 4.0
 URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
