--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,14 +16,15 @@ Suggests:
     Hmisc,
     tidycomm,
     REDCapR,
-    usethis
+    usethis,
+    tidyverse
 Imports: 
     here,
     keyring,
     quarto,
     knitr,
     rmarkdown,
-    tidyverse
+    dplyr
 Encoding: UTF-8
 License: CC BY 4.0
 URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
