--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Suggests:
     tidycomm,
     REDCapR,
     usethis,
-    tidyverse
+    tidyverse,
+    REDCapCAST (>= 24.1.1),
+    skimr
 Imports: 
     here,
     keyring,
