page structure update

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,9 @@ project:
 
 website:
   title: "cSVD burden project"
+  site-url: https://agdamsbo.github.io/cSVD-burden-annotation-and-analysis-project/
+  repo-url: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
+  repo-actions: [source, issue]
   navbar:
     left:
       - href: index.qmd
@@ -19,7 +22,9 @@ website:
           text: SVD scoring scale
         - href: doc/instrument.qmd
           text: REDCap data capture
-
+    right:
+      - icon: "github"
+        href: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
   page-footer:
     center:
       - text: "License: CC BY 4.0 {{< fa brands creative-commons >}} {{< fa brands creative-commons-by >}}"
