--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cSVD burden annotation and analysis project
 Title: cSVD burden project
 Type: Project
-Version: 2024.1.1
+Version: 2024.2.1
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -18,7 +18,7 @@ Suggests:
     REDCapR,
     usethis,
     tidyverse,
-    REDCapCAST (>= 24.1.1),
+    REDCapCAST (>= 24.2.1),
     skimr
 Imports: 
     here,
@@ -27,7 +27,10 @@ Imports:
     knitr,
     rmarkdown,
     dplyr,
-    DiagrammeR
+    DiagrammeR,
+    stRoke,
+    collaborator,
+    patchwork
 Encoding: UTF-8
 License: CC BY 4.0
 URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
