--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,9 +28,7 @@ Imports:
     rmarkdown,
     dplyr,
     DiagrammeR,
-    stRoke,
-    collaborator,
-    patchwork
+    stRoke
 Encoding: UTF-8
 License: CC BY 4.0
 URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
