inter reater reliability calculations included

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     rmarkdown,
     dplyr,
     DiagrammeR,
-    stRoke
+    stRoke,
+    irr
 Encoding: UTF-8
 License: CC BY 4.0
 URL: https://github.com/agdamsbo/cSVD-burden-annotation-and-analysis-project
